--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,21 @@ body{
      color:var(--seconari-text-color)
 }
 .heder_conteiner{
-    margin: 0px 136px;
-    padding: 0 20px;
-   display: flex;}
+  align-items: center;
+   display: flex;
+   }
    .nav{
-    display: flex;
+   display: flex;
    }
    .heder{
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid var(--footer-text-color);
+   
    }
 .conteiner{
     width: 1158px;
-    margin: auto;
+    margin: 0 auto;
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -73,6 +75,17 @@ button{
     margin-right: 76px; 
 
   }
+  .lo_gof{
+    font-family: 'Raleway',sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    color:var(--logo-color);
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+
+  }
   .logo_2{
    
     color:var(--logo-heder-color);
@@ -83,7 +96,7 @@ button{
    
   }
   .list-heder{
-    display: flex;
+    
 }
 
 .list__item:not(:last-child){
@@ -116,7 +129,7 @@ button{
   }
   .adres{
     margin-left:  auto;
-
+    display: flex;
 
     font-size: 16px;
     line-height: 1.5;
@@ -125,11 +138,11 @@ button{
    font-style: normal;}
 
 .adres__item{
-  
+    margin-right: 40px;
 }
 .adres__meil{
  
-    margin-right: 40px;
+
     
 
     color:var(--seconari-text-color);
@@ -180,7 +193,6 @@ button{
         color: var(--hero-title-and-button-color);
     }
     .button {
-       text-align: center;
         padding: 16px 32px;
         max-width: 176px; ;
        
@@ -214,11 +226,12 @@ button{
         clip-path: inset(100%);
         clip: rect(0 0 0 0);
         overflow: hidden;}
-        .advantages {
-            display: flex;
+        .section{
             padding-top: 120px;
             padding-bottom: 120px;
-           max-width: 1128px;
+        }
+        .advantages {
+           
         }
         .advantages__item:not(:last-child){
             margin-right: 24px;
@@ -248,7 +261,7 @@ button{
         }
         .what { 
 
-           padding-bottom: 237px;
+           padding-bottom: 120px;
         }
         .what__title {
             margin-bottom: 72px;
@@ -305,7 +318,7 @@ button{
             margin-right: 24px;
         }
         .team__item{
-            
+            border-radius: 0px 0px 4px 4px;
         }
         .team__photo {
             display: block;
@@ -395,6 +408,7 @@ border-radius: 4px;
 
 }
 .porfolio {
+
 }
 .porfolio__item {
 }
@@ -421,15 +435,16 @@ color:var(--color-text-color)
 
 .lists{
     flex-wrap: wrap;
-    margin-right: ;
+   
     margin-left: auto;
     justify-content: center;
    
     
     }
     .lists__item:not(:last-child){
-    margin-right: 24px;
+        margin-right: 24px;
     }
+    
     .lists__buuton{
         padding: 12px 24px;
     }
@@ -437,25 +452,25 @@ color:var(--color-text-color)
         display: flex;
         flex-wrap: wrap;
        margin-top: 72px;
+       gap: 48px 24px;
        
     }
     .portfolio__conteiner{
         margin: 0px 148px 120px;
         max-width: 1128px;}
-          .porfolio__item:not(:nth-child(3n+3)){
-        margin-right: 24px;
+          
         
-    }
-    .porfolio__item:not(:nth-last-child(-n + 3)){
-        margin-bottom: 48px;
-    }
     
+  
     .porfolio__item{
-        height: 420px;
+       
         max-width: 360px; 
     }
     .border{
-        border: 1px solid var(--footer-text-color);
+        
+        border-left: 1px solid var(--footer-text-color);
+        border-right: 1px solid var(--footer-text-color); 
+        border-bottom: 1px solid var(--footer-text-color);
         padding: 32px 16px;
     }
 .porfolio__photo {
@@ -478,7 +493,7 @@ letter-spacing: 0.02em;
 .portfolio__text {
    margin-top: 8px;
     text-align: left;
-    display: inline-block;
+    
 
     font-size: 16px;
     line-height: 1.5;
