--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ button{
     color:var(--seconari-text-color) ;
    font-style: normal;}
 
-.adres__item{
+.adres__item:not(:last-child){
     margin-right: 40px;
 }
 .adres__meil{
@@ -405,6 +405,8 @@ border-radius: 4px;
 .lists__buuton:hover{
     color: var(--bg-color);
     background-color: var(--portfolio-buuton-bg-hover-color);
+   border: transparent;
+   
 
 }
 .porfolio {
@@ -447,6 +449,7 @@ color:var(--color-text-color)
     
     .lists__buuton{
         padding: 12px 24px;
+       
     }
     .porfolio{
         display: flex;
